// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component test App snapshot with user id 1`] = `
<div>
  <Navbar />
  <main>
    &lt;Route path=/ /&gt;
    &lt;Route path=/orders /&gt;
    &lt;Route path=/loginRedirect /&gt;
    &lt;Route path=/orderStatus/:orderId /&gt;
    &lt;Route path=/ordersPage /&gt;
    &lt;Route render=[object Object] /&gt;
  </main>
  <LogoutSnackbar
    onClose={[Function]}
    open={false}
  />
</div>
`;

exports[`App component test App snapshot without user id 1`] = `
<div>
  <Navbar />
  <main>
    &lt;Route path=/ /&gt;
    &lt;Route path=/orders /&gt;
    &lt;Route path=/loginRedirect /&gt;
    &lt;Route path=/orderStatus/:orderId /&gt;
    &lt;Route path=/ordersPage /&gt;
    &lt;Route render=[object Object] /&gt;
  </main>
  <LoginDialog
    onClose={[Function]}
    onToggleSnackbar={[Function]}
    open={false}
  />
  <LoginDialogSnackbar
    message=""
    onClose={[Function]}
    open={false}
  />
  <LogoutSnackbar
    onClose={[Function]}
    open={false}
  />
</div>
`;
